Fixed a bug where a mis-typed comment in grid.css caused last column in layouts to break

--- a/css/grid.css
+++ b/css/grid.css
@@ -84,7 +84,7 @@
 	float: right;
  }
 
-.last { // Last column in a row can't mess up our nice layout
+.last { /* Last column in a row can't mess up our nice layout */
 	margin-right: 0px;
 }
 
