Upgrading Font-Awesome to v3.2.1 for Fractionless 2.1.0.

--- a/less/style.less
+++ b/less/style.less
@@ -1,18 +1,18 @@
 /*:::: Main Stylesheet ::::*/
 
-@import url('grid.less'); 			// Grid system
-@import url('colors.less'); 		// Site-wide colors
-@import url('mixins.less'); 		// Mixins
-@import url('normalize.less'); 		// CSS reset
-@import url('type.less'); 			// Typography
-@import url('font-awesome.less'); 	// Iconography
-@import url('forms.less'); 			// Form styles
+@import url('grid.less'); 						// Grid system
+@import url('colors.less'); 					// Site-wide colors
+@import url('mixins.less'); 					// Mixins
+@import url('normalize.less'); 					// CSS reset
+@import url('type.less'); 						// Typography
+@import url('font-awesome/font-awesome.less'); 	// Iconography
+@import url('forms.less'); 						// Form styles
 
-/*:::: YOUR STYLES HERE ::::*/
+/*:::: YOUR CUSTOM STYLES HERE ::::*/
 
 
 
 /*:::: No styles below this line ::::*/
-@import url('helpers.less'); 	// Helper classes
-@import url('mobile.less'); 	// Media queries for mobile
-@import url('print.less'); 		// Print styles
+@import url('helpers.less'); 				// Helper classes
+@import url('mobile.less'); 				// Media queries for mobile
+@import url('print.less'); 					// Print styles
