Fixing bugs related to new Font Awesome LESS variables.

--- a/less/style.less
+++ b/less/style.less
@@ -1,18 +1,18 @@
 /*:::: Main Stylesheet ::::*/
 
-@import url('grid.less'); 						// Grid system
-@import url('colors.less'); 					// Site-wide colors
-@import url('mixins.less'); 					// Mixins
-@import url('normalize.less'); 					// CSS reset
-@import url('type.less'); 						// Typography
+@import 'grid.less';	 						// Grid system
+@import 'colors.less';	 						// Site-wide colors
+@import 'mixins.less';	 						// Mixins
+@import 'normalize.less';	 					// CSS reset
+@import 'type.less';	 						// Typography
 @import url('font-awesome/font-awesome.less'); 	// Iconography
-@import url('forms.less'); 						// Form styles
+@import 'forms.less'; 							// Form styles
 
 /*:::: YOUR CUSTOM STYLES HERE ::::*/
 
 
 
 /*:::: No styles below this line ::::*/
-@import url('helpers.less'); 				// Helper classes
-@import url('mobile.less'); 				// Media queries for mobile
-@import url('print.less'); 					// Print styles
+@import 'helpers.less';			 				// Helper classes
+@import 'mobile.less';			 				// Media queries for mobile
+@import 'print.less';			 				// Print styles
