Fixed variable collision in LESS and SASS. @slink/ now refer to standard link color in colors.scss/.less.

--- a/scss/colors.scss
+++ b/scss/colors.scss
@@ -5,7 +5,7 @@ $white: #f7f7f7;
 /*:::: Typography ::::*/
 $headline: #202020;
 $bodytype: #505050;
-$link: #0A457D;
+$slink: #0A457D;
 $vlink: #095B90;
 $hlink: #2E75AD;
 
