--- a/css/style.css
+++ b/css/style.css
@@ -501,7 +501,7 @@ li p {
   top: 0;
 }
 a {
-  color: "\f0c1";
+  color: #0a457d;
   text-decoration: none;
 }
 a:visited {
@@ -542,8 +542,8 @@ strong {
  * -------------------------- */
 @font-face {
   font-family: 'FontAwesome';
-  src: url('../../font/fontawesome-webfont.eot?v=3.2.1');
-  src: url('../../font/fontawesome-webfont.eot?#iefix&v=3.2.1') format('embedded-opentype'), url('../../font/fontawesome-webfont.woff?v=3.2.1') format('woff'), url('../../font/fontawesome-webfont.ttf?v=3.2.1') format('truetype'), url('../../font/fontawesome-webfont.svg#fontawesomeregular?v=3.2.1') format('svg');
+  src: url('../font/fontawesome-webfont.eot?v=3.2.1');
+  src: url('../font/fontawesome-webfont.eot?#iefix&v=3.2.1') format('embedded-opentype'), url('../font/fontawesome-webfont.woff?v=3.2.1') format('woff'), url('../font/fontawesome-webfont.ttf?v=3.2.1') format('truetype'), url('../font/fontawesome-webfont.svg#fontawesomeregular?v=3.2.1') format('svg');
   font-weight: normal;
   font-style: normal;
 }
